--- a/HOML Chapter9.ipynb
+++ b/HOML Chapter9.ipynb
@@ -944,7 +944,7 @@
     "batch_size = 50\n",
     "n_batches = int(np.ceil(m / batch_size))\n",
     "\n",
-    "checkpoint_path = \"/tmp/09. my_logreg_model.ckpt\"\n",
+    "checkpoint_path = \"tmp/09. my_logreg_model.ckpt\"\n",
     "checkpoint_epoch_path = checkpoint_path + \".epoch\"\n",
     "final_model_path = \"./09. my_logreg_model\"\n",
     "\n",
